welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
    prodMotif(scanMotif(getMondeHauteur()))
                       ^Array1:14: warning: enclosing method scanMotif has result type Unit: return value discarded
  return motif
  ^